@@ -1,6 +1,5 @@
 #!/usr/bin/make -f
 
-DEB_CONFIGURE_EXTRA_FLAGS = --disable-static
 
 CFLAGS += -Wno-error=deprecated-declarations
 LDFLAGS += -Wl,-z,defs -Wl,--as-needed
@@ -12,6 +11,10 @@ export DPKG_GENSYMBOLS_CHECK_LEVEL = 4
 
 override_dh_autoreconf:
 	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
+
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--disable-static
 
 override_dh_install:
 	find debian/indicator-printers -name \*.la -delete
